# geoguessr-ai

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  README.md  README_with_yaml_header.md  git.txt  git2.txt  log.txt  nohup.out  pics_output.csv  predict-2022-05-06-12-13-21Mike_41__haversine_0.0074__val_acc_0.5698__val_loss_1.5426__val__05  pyproject.toml  questions.txt  requirements-dev.txt  requirements.txt  requirements.txt.backup  requirements2.txt  test.txt  tmp.csv  todo.md
conf/: config.yaml
data/: README.md
docs/: .tmp.md  .~lock.documentation.md#  README.md  documentation.md  documentation2.md  head.tex  tmp.md
references/: LUMEN Data Science.docx
reports/: train-resnext101_32x8d-22-04-04-01-46-57.txt  train-resnext101_32x8d-22-04-04-01-47-34.txt  train-resnext101_32x8d-22-04-04-01-50-33.txt  train-resnext101_32x8d-22-04-04-01-51-44.txt  train-resnext101_32x8d-22-04-04-01-53-39.txt  train-resnext101_32x8d-22-04-04-01-54-03.txt  train-resnext101_32x8d-22-04-04-01-55-04.txt  train-resnext101_32x8d-22-04-04-01-57-32.txt  train-resnext101_32x8d-22-04-04-01-58-31.txt  train-resnext101_32x8d-22-04-04-02-02-56.txt  train-resnext101_32x8d-22-04-04-02-09-05.txt  train-resnext101_32x8d-22-04-04-02-09-13.txt  train-resnext101_32x8d-22-04-04-02-09-45.txt  train-resnext101_32x8d-22-04-04-02-10-01.txt  train-resnext101_32x8d-22-04-04-02-11-29.txt  train-resnext101_32x8d-22-04-04-02-11-39.txt  train-resnext101_32x8d-22-04-04-02-23-14.txt  train-resnext101_32x8d-22-04-04-02-28-31.txt  train-resnext101_32x8d-22-04-04-02-28-58.txt  train-resnext101_32x8d-22-04-04-02-29-34.txt  train-resnext101_32x8d-22-04-04-02-31-09.txt  train-resnext101_32x8d-22-04-04-02-31-30.txt  train-resnext101_32x8d-22-04-04-02-33-41.txt  train-resnext101_32x8d-22-04-04-02-34-15.txt  train-resnext101_32x8d-22-04-04-10-40-54.txt  train-resnext101_32x8d-22-04-04-10-44-39.txt  train-resnext101_32x8d-22-04-04-10-46-50.txt  (+214 more)
(+304 files in other folders)
