[tool.poetry]
name = "geoguessr-ai"
version = "0.1.0"
description = ""
authors = ["Matej Ciglenečki <matej.ciglenecki@gmail.com>"]
readme = "README.md"
packages = [{ include = "geoguessr_ai" }]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.5"
mypy = "^0.982"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [tool.black]
# line-length = 88

# [tool.pylint.master]
# ignore = ["venv"]

# max-line-length = 88


# [tool.pylint.similarities]
# ignore-imports = "yes"

# [tool.mypy]
# exclude = "venv"


# [tool.isort]
# profile = "black"
