[tool.poetry]
name = "geoguessr-ai"
version = "0.1.0"
description = ""
authors = ["Matej Ciglenečki <matej.ciglenecki@gmail.com>"]
readme = "README.md"
packages = [{ include = "geoguessr_ai" }]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.5"
mypy = "^0.982"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.git
    | \.pytest_cache
    | \.venv
    | \venv
  ))
'''

[tool.pylint.master]
ignore = ["venv"]

max-line-length = 88


[tool.pylint.similarities]
ignore-imports = "yes"

[tool.mypy]
ignore_missing_imports = true
disallow_any_unimported = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
exclude = [".venv", "venv", "tests"]


[tool.isort]
profile = "black"
